2004-06-10  Carl Hetherington  <inkscape@carlh.net>

	* src/desktop-snap.cpp, src/desktop-snap.h,
	src/satisfied-guide-cns.cpp, src/satisfied-guide-cns.h,
	select-context.cpp, selection.cpp, selection.h, seltrans.cpp,
	seltrans.h, sp-ellipse.cpp, sp-image.cpp,
	sp-item-notify-moveto.cpp, sp-item-rm-unsatisfied-cns.cpp,
	sp-item-update-cns.cpp, sp-item.cpp, sp-item.h, sp-offset.cpp,
	sp-rect.cpp, sp-spiral.cpp, sp-star.cpp, sp-text.cpp:

	Use a std::vector to store snap points, rather than a fixed-size
	array.

2004-06-09  Carl Hetherington  <inkscape@carlh.net>

	* src/desktop-snap.cpp, src/desktop-snap.h: Coding style fixes.
	Use NR::Coord rather than double where appropriate.  Added some
	comments.  Use NR::Dim2	where appropriate.  Use NR_HUGE rather
	than hardcoded 1e18s.

	* src/rect-context.cpp, src/nodepath.cpp, src/arc-context.cpp:
	Adapt for changes to sp_desktop_dim_snap prototype.

	* src/select-context.cpp:
	Adapt for changes to sp_desktop_dim_snap_list prototype.	

2004-06-08  MenTaLguY  <mental@rydia.net>

	* src/display/sp-canvas.h, src/livarot/DblLinked.h,
	  src/livarot/LivarotDefs.h, src/livarot/AVL.h, src/livarot/Shape.h,
	  src/livarot/ShapeUtils.h, src/livarot/Ligne.h,
	  src/object-edit.cpp, src/spiral-context.cpp, src/sp-shape.cpp:

	  Portability fixes from Colin Marquardt <colin@marquardt-home.de>.

2004-06-08  Carl Hetherington  <inkscape@carlh.net>

	* src/main.cpp: remove the call to
	Extension::Internal::PrintWin32::init() entirely after Ted pointed
	out that it would be called by code in src/extension/init.cpp
	anyway.

2004-06-08  Ted Gould  <ted@gould.cx>

	* src/main.cpp:

	Added in a version command to our command line args.  This fixes
	enhancement request 968642.

2004-06-07  MenTaLguY  <mental@rydia.net>

	* src/document.cpp, src/document.h, src/document-undo.cpp,
	  src/sp-object.h, src/sp-object.cpp:
	  renamed object garbage collection routines to fit the "orphan"
	  terminology
